Change log for package SOAs

Version 1.1, under development

* BcolsFromBcolllist: changed vertex attributes to FALSE and TRUE instead of 0 and 1,
  in order to avoid a warning from package igraph
* Bug fix: handling of s in SOAs2plus_regular had bugs (leading to failure for s=9,
  because 9 was treated as a prime).
  Now, SOAs2plus_regular, SOA2plus_regulart and createAB (file utilitiesCreate.R)
  all have the same requirements for s:
  primes up to 19, powers of 2 up to 32, powers of 3 up to 27
  (presumably, the larger numbers do not really work well,
  but are in principle possible)

Version 1.0-1, 16 December 2021

* expanded description in DESCRIPTION file, and added a reference
* changed argument F to Fhat in internal function optimize
* made a few changes to the documentation, as requested by CRAN
* corrected a miswrite in a reference for createAB

Version 1.0, 11 December 2021

* first version submitted to CRAN