@@ -8,6 +8,8 @@ export(OSOAs)
 export(OSOAs_LiuLiu)
 export(OSOAs_hadamard)
 export(OSOAs_regular)
+export(SOA_from_OA_guide)
+export(SOA_guide)
 export(SOAs)
 export(SOAs2plus_regular)
 export(SOAs_8level)
